small changes to try to make it work

--- a/views/login.jade
+++ b/views/login.jade
@@ -4,7 +4,7 @@ block content
  .login
   .iot
    h3 IBM Internet of Things Foundation
-   img.avatar(src='/images/IOT_Icons_Thing02.png')
+   img.avatar(src='/images/rexnord_logo.png')
   h2.page-header Login
   p Please login below
   if errors
